--- a/public/customer/css/templatemo-barber-shop.css
+++ b/public/customer/css/templatemo-barber-shop.css
@@ -598,7 +598,7 @@ strong {
 }
 
 .contact-block .custom-icon {
-   background: var(--primary-color);
+   background: var(--white-color);
    border-radius: var(--border-radius-large);
    display: block;
    width: 50px;
